# prompt-manager

./: .gitignore  App.tsx  README.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  postcss.config.js  tsconfig.json  types.ts  vite.config.ts
.github/workflows/: deploy.yml  release.yml
assets/: index-62Cu85Ew.js  index-B3XMcG4E.js  index-Be_ivL4I.js  index-BhObdhPq.js  index-Bvu8rRze.css  index-CXmcBZnw.js  index-CggxiPuV.css  index-D3EDr03Q.js  index-D3Ua4p-1.js  index-D9N7wk7Q.css  index-DCGrjZSU.css  index-DDU9lQDm.js  index-DEUx0mAf.css  index-DFO4S2QC.js  index-DHf1c0ja.js  index-DTfS6rfn.js  index-DiFo8w6O.js  index-DsmLTuFj.css  index-Fmwy9dSD.css  index-uHU1m15H.js  window-BEE4eeaR.js  window-BW0N6lg9.js  window-BysDfAqV.js  window-CJqaARFR.js  window-Du396FC_.js
components/: SettingsModal.tsx  SettingsTab.tsx
components/Layout/: ActivityBar.tsx  MainContent.tsx  SidePanel.tsx  StatusBar.tsx  TitleBar.tsx
components/ui/: Toast.tsx
context/: ToastContext.tsx
services/: dbService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs  store.rs
utils/: i18n.ts  iconHelper.tsx
